syntax="proto3";
package proto;

import "cmd/proto/pb_set.proto";

option go_package="cmd/proto";

service rosedb {
    // ******************** cmd_set ****************
    rpc SAdd(SAddReq) returns (SAddRsp) {};
    rpc SPop(SPopReq) returns (SPopRsp) {};
    rpc SIsMember(SIsMemberReq) returns (SIsMemberRsp) {};
    rpc SRandMember(SRandMemberReq) returns (SRandMemberRsp) {};
    rpc SRem(SRemReq) returns (SRemRsp) {};
    rpc SMove(SMoveReq) returns (SMoveRsp) {};
    rpc SCard(SCardReq) returns (SCardRsp) {};
    rpc SMembers(SMembersReq) returns (SMembersRsp) {};
    rpc SUnion(SUnionReq) returns (SUnionRsp) {};
    rpc SDiff(SDiffReq) returns (SDiffRsp) {};
    rpc SKeyExists(SKeyExistsReq) returns (SKeyExistsRsp) {};
    rpc SClear(SClearReq) returns (SClearRsp) {};
    rpc SExpire(SExpireReq) returns (SExpireRsp) {};
    rpc STTL(STTLReq) returns (STTLRsp) {};
}